# aqua

./: .dockerignore  .gitignore  Dockerfile  Makefile  Pipfile  README.md  app.py  dev.py  docker-compose.yaml  pyproject.toml  settings.example.yaml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.github/workflows/: publish.yaml
bot/: app.py  cog.py
cogs/: CmdFanart.py  Test.py.disable  TwitterSyncList.py  UpdatePresence.py  VTuberFanartCounter.py  VTuberFanartCrawler.py
config/: default.yaml
db/: session.py  video.py
db/migrate/: manage.py  migrate.cfg
jobs/: TwitterSyncList.py  VTuberFanartCrawler.py  __init__.py
utils/: config.py  googledrive.py  logger.py  singleton.py  twitter.py
