[tool.poetry]
name = "aqua"
version = "0.1.0"
description = "discord bot"
authors = ["Suzuka Asagiri <git@suzutan.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tweepy = "*"
Flask = "*"
SQLAlchemy = "*"
PyYAML = "*"
google-api-python-client = "*"
pydrive = "*"
discord-py = "*"
sqlalchemy = "*"
sqlalchemy-migrate = "^0.13.0"
pymysql = "^0.10.0"

[tool.poetry.dev-dependencies]
bpython = "*"
flake8 = "*"
autopep8 = "*"
rope = "^0.17.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
